--- a/package.json
+++ b/package.json
@@ -5,12 +5,19 @@
   "main": "index.js",
   "scripts": {
     "b-0": "webpack --config ./packages/0.start/webpack.config.js",
-    "b-1": "webpack --config ./packages/1.mode_devtool/webpack.config.js"
+    "b-1": "webpack --config ./packages/1.mode_devtool/webpack.config.js",
+    "b-2": "webpack --config ./packages/2.babel/webpack.config.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/cli": "^7.23.4",
+    "@babel/core": "^7.23.7",
+    "@babel/plugin-transform-arrow-functions": "^7.23.3",
+    "@babel/plugin-transform-block-scoping": "^7.23.4",
+    "@babel/preset-env": "^7.23.7",
+    "babel-loader": "^9.1.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
   }
