--- a/package.json
+++ b/package.json
@@ -16,7 +16,12 @@
     "@babel/plugin-transform-block-scoping": "^7.23.4",
     "@babel/preset-env": "^7.23.7",
     "babel-loader": "^9.1.3",
+    "browserslist": "^4.22.2",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "core-js": "^3.35.0",
+    "regenerator-runtime": "^0.14.1"
   }
 }
