--- a/src/7.optimization/package.json
+++ b/src/7.optimization/package.json
@@ -16,6 +16,8 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
-    "dayjs": "^1.11.10"
+    "dayjs": "^1.11.10",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
