--- a/src/11.css-minimizer/package.json
+++ b/src/11.css-minimizer/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^6.9.1",
+    "css-minimizer-webpack-plugin": "^6.0.0",
     "html-webpack-plugin": "^5.6.0",
     "mini-css-extract-plugin": "^2.7.7",
     "style-loader": "^3.3.4",
