--- a/src/12.tree_shaking/package.json
+++ b/src/12.tree_shaking/package.json
@@ -7,6 +7,7 @@
     "start": "webpack server --config ./config/index.config.js --env development",
     "build": "webpack --config ./config/index.config.js --env production"
   },
+  "sideEffects": ["*.css", "getUserName.js"],
   "keywords": [],
   "author": "",
   "license": "ISC",
