--- a/src/15.speed_measure/package.json
+++ b/src/15.speed_measure/package.json
@@ -15,16 +15,22 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.23.9",
+    "babel-loader": "^9.1.3",
     "compression-webpack-plugin": "^11.0.0",
     "css-loader": "^6.9.1",
     "css-minimizer-webpack-plugin": "^6.0.0",
     "html-webpack-plugin": "^5.6.0",
     "mini-css-extract-plugin": "^2.7.7",
+    "speed-measure-webpack-plugin": "^1.5.0",
     "style-loader": "^3.3.4",
     "terser-webpack-plugin": "^5.3.10",
     "webpack": "^5.90.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1",
     "webpack-merge": "^5.10.0"
+  },
+  "dependencies": {
+    "@babel/preset-env": "^7.23.9"
   }
 }
