--- a/src/15.speed_measure/package.json
+++ b/src/15.speed_measure/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/preset-env": "^7.23.9",
     "@babel/core": "^7.23.9",
     "babel-loader": "^9.1.3",
     "compression-webpack-plugin": "^11.0.0",
@@ -31,6 +32,5 @@
     "webpack-merge": "^5.10.0"
   },
   "dependencies": {
-    "@babel/preset-env": "^7.23.9"
   }
 }
