--- a/src/16.bundle_analyzer/package.json
+++ b/src/16.bundle_analyzer/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.23.9",
+    "@babel/preset-env": "^7.23.9",
     "babel-loader": "^9.1.3",
     "compression-webpack-plugin": "^11.0.0",
     "css-loader": "^6.9.1",
@@ -32,6 +33,6 @@
     "webpack-merge": "^5.10.0"
   },
   "dependencies": {
-    "@babel/preset-env": "^7.23.9"
+    "dayjs": "^1.11.10"
   }
 }
