--- a/src/17.custom_loader/package.json
+++ b/src/17.custom_loader/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "schema-utils": "^4.2.0",
     "webpack": "^5.90.1",
     "webpack-cli": "^5.1.4"
   }
